[package]
name = "laser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
glam = "0.24.1"
# nannou = "0.18.1"
# nannou_egui = "0.5.0"
ndarray = "0.15.6"
num_enum = "0.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
